bk_ida/gccida/g0/noce_process_if_block
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2098:4: error: expected ';' after expression
rtx note; // [rsp+70h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2098:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+70h] [rbp-60h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2099:4: error: expected ';' after expression
rtx orig_x; // [rsp+78h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2099:5: error: use of undeclared identifier 'orig_x'
rtx orig_x; // [rsp+78h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2100:4: error: expected ';' after expression
rtx b; // [rsp+80h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2100:5: error: use of undeclared identifier 'b'
rtx b; // [rsp+80h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2101:4: error: expected ';' after expression
rtx a; // [rsp+88h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2101:5: error: use of undeclared identifier 'a'
rtx a; // [rsp+88h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2102:4: error: expected ';' after expression
rtx set_a; // [rsp+90h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2102:5: error: use of undeclared identifier 'set_a'
rtx set_a; // [rsp+90h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2103:4: error: expected ';' after expression
rtx insn_a; // [rsp+98h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2103:5: error: use of undeclared identifier 'insn_a'
rtx insn_a; // [rsp+98h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2104:4: error: expected ';' after expression
rtx cond; // [rsp+A0h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2104:5: error: use of undeclared identifier 'cond'
rtx cond; // [rsp+A0h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2105:4: error: expected ';' after expression
rtx jump; // [rsp+A8h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2105:5: error: use of undeclared identifier 'jump'
rtx jump; // [rsp+A8h] [rbp-28h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2106:4: error: expected ';' after expression
rtx insn; // [rsp+B0h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2106:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+B0h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/ifcvt.c:2107:4: error: expected ';' after expression
rtx x; // [rsp+B8h] [rbp-18h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_process_if_block/src/obj/ifcvt.o] Error 1
